Revision history for Perl extension Fl

{{$NEXT}}

    - New widgets:
        - Fl::Input - single line text input widget
        - Fl::SecretInput - input widget with hidden text (password fields, etc.)

0.99.5 2016-05-08T22:04:46Z

    - Starting basic documentation in Fl.pm
    - Callbacks no longer cause crash on destruction due to bad ref counts
    - New widgets:
        - Fl::CheckButton - a button with a checkbox
        - Fl::LightButton - a button with a light to indicate 'on' vs 'off'
        - Fl::ReturnButton - triggers callback when Enter key is pressed
        - Fl::RepeatButton - repeatedly triggers callback as long as it's held down
        - Fl::RadioRoundButton - looks like a radio button and acts like one too
        - Fl::RoundButton - looks like a radio button but behaves like a traditional button
        - Fl::RadioButton - acts like a radio button but looks like a regular one
        - Fl::RadioLightButton - no idea...
        - Fl::ToggleButton - toggles on when pressed and back off when pressed again
    - New export tags/values (get them all with :enum, of course):
        - :align - Label alignment values

0.99.4 2016-05-06T02:02:22Z

    - New widget: Fl::Button
    - Incomplete callback system for widgets (strong refs cause crash)
    - New export tags/values (get them all with :enum, of course):
        - :when - Callback trigger conditions
        - :button - Fl::Button types (normal, toggle, radio)
        - :keyboard - Event and state types for keyboard keys
        - :mouse - Event and state values for mouse buttons
    - Forgot to update eg/synopsis.pl to new :event tag in v0.99.2

0.99.3 2016-05-02T20:19:14Z

    - Require Alien::FLTK during configure because some smokers ignore runtime prereqs

0.99.2 2016-05-02T02:57:53Z

    - New widget: Fl::Chart
    - New demo script: eg/chart.pl
    - New export values found in Fl::Enumerations
        - Fl_Chart types exported with :chart tag