@@ -1,0 +1,91 @@
+=pod
+
+=head1 NAME
+
+Fl::FloatInput - Text Widget that Limits Users to Floating Point Numbers Only
+
+=head1 Synopsis
+
+    use Fl;
+    my $input = Fl::FloatInput->new(0, 0, 100, 200, 'Hello, World!');
+
+=head1 Description
+
+The Fl::FloatInput class represents a widget that only allows the user to type
+floating point numbers (sign, digits, decimal point, more digits, 'E' or 'e',
+sign, digits).
+
+=head1 Methods
+
+Fl::FloatInput inherits from Fl::Input and Fl::Widget. On top of that, it
+exposes the following methods...
+
+=cut
+
+#include <FL/Fl_Float_Input.H>
+
+MODULE = Fl::FloatInput     PACKAGE = Fl::FloatInput  PREFIX = Fl_
+
+PROTOTYPES: DISABLE
+
+=pod
+
+=head2 new(...)
+
+    my $text_a = Fl::FloatInput->new(0, 0, 250, 500, 'Important Stuff');
+    my $text_b = Fl::FloatInput->new(0, 0, 250, 500);
+
+The constructor creates a new widget using the given position, size, and
+label.
+
+The widget's boxtype is FL_DOWN_BOX by default.
+
+The destructor removes the widget.
+
+=cut
+
+Fl_Float_Input *
+Fl_Float_Input::new( ... )
+    CASE: (items == 5 || items == 6)
+        CODE:
+            /*(int x, int y, int w, int h, char * label = $0)*/
+            char * label = "";
+            int x = (int)SvIV(ST(1));
+            int y = (int)SvIV(ST(2));
+            int w = (int)SvIV(ST(3));
+            int h = (int)SvIV(ST(4));
+            if (items == 6) label = (char *)SvPV_nolen(ST(5));
+            RETVAL = new Fl_Float_Input(x,y,w,h,label);
+        OUTPUT:
+            RETVAL
+
+void
+Fl_Float_Input::DESTROY()
+    CODE:
+        int refcount = SvREFCNT(SvRV(ST(0)));
+        if (refcount == 1) {
+            delete THIS;
+        }
+        else {
+            SvREFCNT_dec(ST(0));
+        }
+
+MODULE = Fl        PACKAGE = Fl
+
+BOOT:
+    set_isa("Fl::FloatInput", "Fl::Input");
+
+=pod
+
+=head1 LICENSE
+
+Copyright (C) Sanko Robinson.
+
+This library is free software; you can redistribute it and/or modify
+it under the same terms as Perl itself.
+
+=head1 AUTHOR
+
+Sanko Robinson E<lt>sanko@cpan.orgE<gt>
+
+=cut
